--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -48,3 +48,15 @@
     width: 10%;
     justify-content: center;
   }
+
+  @media (max-width: 450px) {
+    .translationContainer {
+      width: 30%;
+      display: flex;
+      justify-content: flex-end;
+      margin: 20px;
+    }
+    .translationContainer > .countriesFlag {
+      width: 30%;
+    }
+}
