--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -88,7 +88,51 @@
   margin-left: 0.5rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 450px) {
+  .grid {
+    width: 100%;
+    flex-direction: column;
+  }
+  .movieDbLogo {
+    /* display: none; */
+    width: 80%;
+  }
+  .headerContainer.expanded > h1 {
+    font-size: 1em;
+  }
+  .headerContainer.expanded > .icons {
+    width: auto;
+    margin-right: 15px;
+  }
+  .headerContainer {
+    width: 80%;
+  }
+  .headerContainer > .icons {
+    justify-content: center;
+    width: 80%;
+  }
+  .headerContainer > .icons > a {
+    text-align: right;
+  }
+  .theatersIcon {
+    font-size: 20vw !important;
+  }
+  .main {
+    width: 100%;
+  }
+  .main.expanded {
+    width: 60% !important;
+  }
+
+  .headerContainer.expanded > h1 {
+    width: 20%;
+  }
+  .headerContainer.expanded > .icons > a {
+    display: none;
+  }
+}
+
+@media (min-width: 451px) and (max-width: 600px) {
   .grid {
     width: 100%;
     flex-direction: column;
